[gd_scene load_steps=24 format=2]

[ext_resource path="res://menu_assets/resized_title_background.png" type="Texture" id=1]
[ext_resource path="res://scrolling_background.gd" type="Script" id=2]
[ext_resource path="res://menu_assets/title_arch.png" type="Texture" id=3]
[ext_resource path="res://menu_assets/Pangolin-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GoToGame.gd" type="Script" id=5]
[ext_resource path="res://sound_assets/Oniku Loop.wav" type="AudioStream" id=6]
[ext_resource path="res://sound_assets/menu_selection.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/enter_key.png" type="Texture" id=8]
[ext_resource path="res://assets/arrow_keys.png" type="Texture" id=9]
[ext_resource path="res://menu_assets/cross icon.png" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME*0.4 + scroll_speed;
	vec4 col = texture(TEXTURE, shifteduv);
	COLOR = col;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxLine" id=5]
color = Color( 0.556863, 0.956863, 1, 1 )
thickness = 3

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.768627 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=13]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 960.0
texture = ExtResource( 1 )
stretch_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_speed = 0.1

[node name="Arch" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 500.0
margin_bottom = 46.0
rect_min_size = Vector2( 500, 46 )
flat = true

[node name="Label" type="Label" parent="Buttons/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -23.0
margin_right = 250.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "START"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Button" parent="Buttons"]
margin_top = 50.0
margin_right = 500.0
margin_bottom = 96.0
rect_min_size = Vector2( 500, 46 )
flat = true

[node name="Label" type="Label" parent="Buttons/HowToPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 26.0
rect_min_size = Vector2( 500, 46 )
custom_fonts/font = SubResource( 4 )
text = "HOW TO PLAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 7 )

[node name="LineStart" type="PanelContainer" parent="."]
margin_left = 456.157
margin_top = 339.071
margin_right = 956.156
margin_bottom = 347.071
rect_scale = Vector2( 0.22501, 0.63177 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineHowtoPlay" type="PanelContainer" parent="."]
margin_left = 428.656
margin_top = 381.163
margin_right = 928.656
margin_bottom = 389.163
rect_scale = Vector2( 0.336027, 0.894911 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tutorial" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialPanel1" type="PanelContainer" parent="CanvasLayer/Tutorial"]
margin_left = 60.4285
margin_top = 34.4038
margin_right = 179.429
margin_bottom = 116.404
rect_scale = Vector2( 7.63733, 6.44079 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="CanvasLayer/Tutorial"]
margin_top = 28.541
margin_right = 40.0
margin_bottom = 68.541
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterKey" type="PanelContainer" parent="CanvasLayer/Tutorial/Text"]
margin_left = 775.678
margin_top = 220.421
margin_right = 894.678
margin_bottom = 302.421
rect_scale = Vector2( 2.27185, 1.96045 )
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Tutorial/Text/EnterKey"]
margin_right = 119.0
margin_bottom = 82.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="CanvasLayer/Tutorial/Text"]
margin_left = 137.179
margin_top = 86.267
margin_right = 358.179
margin_bottom = 100.267
rect_scale = Vector2( 1.65189, 1.86131 )
custom_fonts/font = SubResource( 8 )
text = "Use Arrow Keys or WASD to move."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Tutorial/Text"]
margin_left = 134.35
margin_top = 179.061
margin_right = 595.35
margin_bottom = 193.061
rect_scale = Vector2( 1.65189, 1.86131 )
custom_fonts/font = SubResource( 9 )
text = "Use the Keys 1 to 6 or Click on the Icons below to Select a Rainbow Tile."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/Tutorial/Text"]
margin_left = 132.35
margin_top = 278.198
margin_right = 593.35
margin_bottom = 292.198
rect_scale = Vector2( 1.65189, 1.86131 )
custom_fonts/font = SubResource( 10 )
text = "Press Enter to Set Down a Rainbow Tile."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/Tutorial/Text"]
margin_left = 126.936
margin_top = 369.284
margin_right = 587.936
margin_bottom = 389.284
rect_scale = Vector2( 1.65189, 1.86131 )
custom_fonts/font = SubResource( 11 )
text = "Press Backspace to Delete a Rainbow Tile."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer/Tutorial/Text"]
margin_left = 128.35
margin_top = 451.904
margin_right = 589.35
margin_bottom = 465.904
rect_scale = Vector2( 1.65189, 1.86131 )
custom_fonts/font = SubResource( 12 )
text = "Follow the Arrow Sign Boards and Start Building!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowKey" type="PanelContainer" parent="CanvasLayer/Tutorial/Text"]
margin_left = 732.18
margin_top = 38.2478
margin_right = 851.18
margin_bottom = 120.248
rect_scale = Vector2( 1.39149, 1.35726 )
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Tutorial/Text/ArrowKey"]
margin_right = 119.0
margin_bottom = 82.0002
texture = ExtResource( 9 )

[node name="exit" type="TextureButton" parent="CanvasLayer/Tutorial"]
margin_left = 906.029
margin_top = 43.1945
margin_right = 1626.03
margin_bottom = 763.194
rect_scale = Vector2( 0.0549512, 0.0549512 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Buttons/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Buttons/HowToPlay" to="." method="_on_HowToPlay_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/HowToPlay" to="." method="_on_HowToPlay_mouse_exited"]
[connection signal="pressed" from="Buttons/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tutorial/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Tutorial/exit" to="." method="_on_exit_pressed"]
